--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.10.3",
     "nuxt": "^3.9.0",
     "vue": "^3.4.0",
     "vue-router": "^4.2.5"
@@ -17,8 +18,5 @@
   "engines": {
     "node": ">=20.9.0"
   },
-  "dependencies": {
-    "@videojs-player/vue": "^1.0.0",
-    "video.js": "^8.9.0"
-  }
+  "dependencies": {}
 }
