--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.10.3",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.10.6",
     "daisyui": "^4.5.0",
     "nuxt": "^3.9.0",
